--- a/templates/base.html
+++ b/templates/base.html
@@ -58,7 +58,7 @@
                         {% get_category_list_context as category_list %}
                         {% for category in category_list %}
                             <li>
-                                <a href="#">{{ category }}</a>
+                                <a href="{% url 'Topics:view_by_category' slug=category.slug %}">{{ category }}</a>
                             </li>
                         {% endfor %}
                     </ul>
