--- a/Topics/templates/Topics/view_topic.html
+++ b/Topics/templates/Topics/view_topic.html
@@ -15,4 +15,10 @@
             </div>
         </div>
     </div>
+
+    <div class="row" id="comment">
+        <div class="col-md-12 col-sm-12">
+            Comment Form
+        </div>
+    </div>
 {% endblock %}
