--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">{% settings_value 'APP_NAME' %}</a>
+            <a class="navbar-brand" href="{% url 'Topics:index' %}">{% settings_value 'APP_NAME' %}</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
