--- a/Topics/templates/Topics/view_topic.html
+++ b/Topics/templates/Topics/view_topic.html
@@ -22,13 +22,41 @@
         <div class="col-md-12 col-sm-12">
             {% get_comment_list for topic as topic_comment_list %}
             {% for topic_comment in topic_comment_list %}
-                <div class="row">
+                <div class="row comment-row mg-bottom-sm">
                     <div class="col-md-12 col-sm-12">
-                        {% if topic_comment.user %}
-                            {{ topic_comment.user.username }}: {{ topic_comment.comment }}
-                        {% else %}
-                            {{ topic_comment.user_name }}: {{ topic_comment }}
-                        {% endif %}
+                        <div class="row">
+                            <div class="col-md-2 col-sm-2">
+                                <div class="comment-image-wrapper">
+                                    <img src="http://www.dotnetcodesg.com/Register/UserImage/Default.png" alt="Anonymous User" />
+                                </div>
+                            </div>
+
+                            <div class="col-md-10 col-sm-10">
+                                <div class="row">
+                                    <div class="col-md-6 col-sm-6">
+                                        <strong>
+                                            {% if topic_comment.user %}
+                                                {{ topic_comment.user.username }}
+                                            {% else %}
+                                                {{ topic_comment.user_name }}
+                                            {% endif %}
+                                        </strong>
+                                    </div>
+
+                                    <div class="col-md-6 col-sm-6 text-right">
+                                        <span class="label label-warning">{{ topic_comment.submit_date|date:'d. F Y H:i' }}</span>
+                                    </div>
+                                </div>
+
+                                <div class="row">
+                                    <div class="col-md-12 col-sm-12">
+                                        <p>
+                                            {{ topic_comment.comment }}
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             {% endfor %}
@@ -38,7 +66,8 @@
     <div class="row" id="comment">
         <div class="col-md-12 col-sm-12">
             {% get_comment_form for topic as form %}
-            <form action="{% comment_form_target %}" method="POST">
+            <form action="{% url 'Comments:comments-post-comment' %}" method="POST">
+                <input type="hidden" name="next" value="{{ request.path }}" />
                 {% csrf_token %}
                 {% bootstrap_form form %}
 
