--- a/Users/templates/Users/register.html
+++ b/Users/templates/Users/register.html
@@ -17,7 +17,7 @@
 
     <div class="row">
         <div class="col-md-12 col-sm-12">
-            <form method="post">
+            <form method="post" enctype="multipart/form-data">
                 {% csrf_token %}
                 {% bootstrap_form user_form %}
                 {% bootstrap_form user_profile_form %}
