--- a/Comments/templates/comments/preview.html
+++ b/Comments/templates/comments/preview.html
@@ -1,39 +1,35 @@
 {% extends "comments/base.html" %}
 {% load i18n %}
+{% load bootstrap3 %}
 
 {% block title %}{% trans "Preview your comment" %}{% endblock %}
 
 {% block content %}
-  {% load comments %}
-  <form action="{% comment_form_target %}" method="post">{% csrf_token %}
-    {% if next %}
-      <div><input type="hidden" name="next" value="{{ next }}"/></div>{% endif %}
-    {% if form.errors %}
-      <h1>{% blocktrans count counter=form.errors|length %}Please correct the error below{% plural %}Please correct the
-        errors below{% endblocktrans %}</h1>
-    {% else %}
-      <h1>{% trans "Preview your comment" %}</h1>
-      <blockquote>{{ comment|linebreaks }}</blockquote>
-      <p>
-        {% trans "and" %} <input type="submit" name="submit" class="submit-post" value="{% trans "Post your comment" %}"
-                                 id="submit"/> {% trans "or make changes" %}:
-      </p>
-    {% endif %}
-    {% for field in form %}
-      {% if field.is_hidden %}
-        <div>{{ field }}</div>
-      {% else %}
-        {% if field.errors %}{{ field.errors }}{% endif %}
-        <p
-                {% if field.errors %} class="error"{% endif %}
-                {% ifequal field.name "honeypot" %} style="display:none;"{% endifequal %}>
-          {{ field.label_tag }} {{ field }}
-        </p>
-      {% endif %}
-    {% endfor %}
-    <p class="submit">
-      <input type="submit" name="submit" class="submit-post" value="{% trans "Post" %}"/>
-      <input type="submit" name="preview" class="submit-preview" value="{% trans "Preview" %}"/>
-    </p>
-  </form>
+    {% load comments %}
+    <form action="{% url 'Comments:comments-post-comment' %}" method="post">{% csrf_token %}
+        {% if next %}
+            <div><input type="hidden" name="next" value="{{ next }}"/></div>{% endif %}
+        {% if form.errors %}
+            <h1>{% blocktrans count counter=form.errors|length %}Please correct the error below{% plural %}Please
+                correct the
+                errors below{% endblocktrans %}</h1>
+
+            <div class="divider"></div>
+        {% else %}
+            <h1>{% trans "Preview your comment" %}</h1>
+            <blockquote>{{ comment|linebreaks }}</blockquote>
+            <p>
+                {% trans "and" %} <input type="submit" name="submit" class="submit-post"
+                                         value="{% trans "Post your comment" %}"
+                                         id="submit"/> {% trans "or make changes" %}:
+            </p>
+        {% endif %}
+        {% bootstrap_form form %}
+
+        {% buttons %}
+            <button type="submit" class="btn btn-primary">
+                {% bootstrap_icon "envelope" %} {% trans 'Post' %}
+            </button>
+        {% endbuttons %}
+    </form>
 {% endblock %}
