--- a/Comments/templates/comments/form.html
+++ b/Comments/templates/comments/form.html
@@ -1,21 +1,26 @@
-{% load comments i18n %}
+{% load comments i18n bootstrap3 %}
 <form action="{% comment_form_target %}" method="post">{% csrf_token %}
-  {% if next %}
-    <div><input type="hidden" name="next" value="{{ next }}"/></div>{% endif %}
-  {% for field in form %}
-    {% if field.is_hidden %}
-      <div>{{ field }}</div>
-    {% else %}
-      {% if field.errors %}{{ field.errors }}{% endif %}
-      <p
-              {% if field.errors %} class="error"{% endif %}
-              {% ifequal field.name "honeypot" %} style="display:none;"{% endifequal %}>
-        {{ field.label_tag }} {{ field }}
-      </p>
-    {% endif %}
-  {% endfor %}
-  <p class="submit">
-    <input type="submit" name="post" class="submit-post" value="{% trans "Post" %}"/>
-    <input type="submit" name="preview" class="submit-preview" value="{% trans "Preview" %}"/>
-  </p>
+    {% if next %}
+        <div><input type="hidden" name="next" value="{{ next }}"/></div>{% endif %}
+    {% for field in form %}
+        {% if field.is_hidden %}
+            <div>{{ field }}</div>
+        {% else %}
+            {% if field.errors %}{{ field.errors }}{% endif %}
+            <p
+                    {% if field.errors %} class="error"{% endif %}
+                    {% ifequal field.name "honeypot" %} style="display:none;"{% endifequal %}>
+                {% bootstrap_field field %}
+            </p>
+        {% endif %}
+    {% endfor %}
+
+    {% buttons %}
+        <button type="submit" name="post" class="btn btn-primary">
+            {% bootstrap_icon "envelope" %} {% trans 'Add Comment' %}
+        </button>
+        <button type="submit" name="preview" class="btn btn-primary">
+            {% bootstrap_icon "eye-open" %} {% trans 'Preview' %}
+        </button>
+    {% endbuttons %}
 </form>
