--- a/Topics/templates/Topics/trending.html
+++ b/Topics/templates/Topics/trending.html
@@ -3,12 +3,12 @@
 {% load settings %}
 {% load i18n %}
 
-{% block title %}{% title 'Latest Topics' %}{% endblock %}
+{% block title %}{% title 'Trending Topics' %}{% endblock %}
 
 {% block content %}
     <div class="row">
         <div class="col-md-12 col-sm-12">
-            <h1>{% trans 'Latest Topics' %}</h1>
+            <h1>{% trans 'Trending Topics' %}</h1>
         </div>
     </div>
 
