--- a/templates/base.html
+++ b/templates/base.html
@@ -35,13 +35,13 @@
         <div class="collapse navbar-collapse" id="navbar-collapse">
             <ul class="nav navbar-nav">
                 <li>
-                    <a href="#">
+                    <a href="{% url 'Topics:trending' %}">
                         {% bootstrap_icon 'fire' %}
                         {% trans 'Trending Topics' %}
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="{% url 'Topics:all' %}">
                         {% bootstrap_icon 'th-list' %}
                         {% trans 'All Topics' %}
                     </a>
@@ -62,33 +62,9 @@
                 </li>
             </ul>
 
-            <ul class="nav navbar-nav navbar-right">
-                {% if not request.user.is_authenticated %}
-                    <li>
-                        <a href="{% url 'Users:register' %}">
-                            {% bootstrap_icon 'plus' %}
-                            {% trans 'Register' %}
-                        </a>
-                    </li>
-                    <li>
-                        <a href="{% url 'Users:login' %}">
-                            {% bootstrap_icon 'user' %}
-                            {% trans 'Login' %}
-                        </a>
-                    </li>
-                {% else %}
-                    <li>
-                        <a href="{% url 'Users:logout' %}">
-                            {% bootstrap_icon 'off' %}
-                            {% trans 'Logout' %}
-                        </a>
-                    </li>
-                {% endif %}
-            </ul>
-
-            <form class="navbar-form navbar-right" role="search">
+            <form action="{% url 'Topics:search' %}" class="navbar-form navbar-right" role="search">
                 <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Search">
+                    <input value="{{ request.GET.search_query }}" type="text" class="form-control" placeholder="Search" name="search_query" />
                 </div>
                 <button type="submit" class="btn btn-default">{% bootstrap_icon 'search' %}</button>
             </form>
@@ -104,7 +80,61 @@
     {% block content %}{% endblock %}
 </div>
 
+<footer id="footer">
+    <nav class="navbar navbar-inverse navbar-fixed-bottom">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                        data-target="#navbar-collapse">
+                    <span class="sr-only">{% trans 'Toggle navigation' %}</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="{% url 'Topics:index' %}">{% settings_value 'APP_NAME' %} &copy;, {% now "Y" %}</a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="navbar-collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="{% url 'Topics:trending' %}">
+                            {% trans 'About Us' %}
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{% url 'Topics:all' %}">
+                            {% trans 'Privacy Policy' %}
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            {% trans 'Contact Us' %}
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container-fluid -->
+    </nav>
+</footer>
+
 {% bootstrap_javascript %}
+<script type="text/javascript">
+    /* * * CONFIGURATION VARIABLES * * */
+    var disqus_shortname = 'shareyouropinion';
+
+    /* * * DON'T EDIT BELOW THIS LINE * * */
+    (function () {
+        var s = document.createElement('script');
+        s.async = true;
+        s.type = 'text/javascript';
+        s.src = '//' + disqus_shortname + '.disqus.com/count.js';
+        (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+    }());
+</script>
 {% render_js_files %}
 </body>
 </html>
